# portools

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  todo
crates/mongo-util/: Cargo.toml
crates/mongo-util/src/: change_stream.rs  lib.rs  mongodm.rs  record.rs  schema.rs
crates/portools-common/: Cargo.toml
crates/portools-common/src/: lib.rs  log.rs  model.rs  unit_test_util.rs  validate.rs
crates/portools-common/src/dao/: local.rs  mod.rs  mongo.rs
crates/portools-common/src/model/: currency.rs  lot.rs  mod.rs
crates/portools-service/: Cargo.toml  Dockerfile
crates/portools-service/resource/test/csv_digester/: missing_header.csv  missing_quantity_column.csv  valid_different_column_order.csv  valid_with_capitalized_headers.csv  valid_with_whitespace.csv
crates/portools-service/resource/test/service/: valid_2.csv
crates/portools-service/scripts/: build_container.sh  run_all_containers.sh  run_container.sh  run_mongo_container.sh  run_portools_servkce_container.sh
crates/portools-service/src/: config.rs  digest.rs  lib.rs  main.rs  model.rs  unit_test_util.rs
crates/portools-service/src/dao/: local.rs  mod.rs  mongo.rs
crates/portools-service/src/service/: mod.rs  state.rs  util.rs
crates/portools-service/tests/: test_service.rs
crates/portools-stream/: Cargo.toml
crates/portools-stream/scripts/: build_container.sh  run_container.sh
crates/portools-stream/src/: allocation.rs  change_stream.rs  lib.rs  main.rs
crates/test-util/: Cargo.toml
k8s/: deployment.yml
libs/mongo-util/: Cargo.toml
libs/mongo-util/src/: lib.rs
libs/test-util/: Cargo.toml
libs/test-util/src/: lib.rs
minikube/: deployment.yaml  ingress.yaml  service.yaml
resource/: example
resource/test/csv_digester/: row_with_invalid_value.csv
resource/test/service/: valid.csv
scripts/: build_all_containers.sh  build_container.sh  create_network_bridge.sh  run_all_containers.sh  run_container.sh  run_mongo_container.sh  run_portools_service_container.sh  run_portools_streams_container.sh
scripts/cargo/: run_tests_with_mongo_container.sh  run_with_dependencies.sh
scripts/docker/: build_service_container.sh  run_container.sh  run_mongo_container.sh  run_with_dependencies.sh
scripts/k8s/: run_container.sh
scripts/minikube/: build_container.sh  run_container.sh
src/: actix_util.rs  config.rs  csv_digester.rs  dao.rs  digest.rs  lib.rs  lot.rs  main.rs  model.rs  portfolio.rs  test_util.rs  unit_test_util.rs  util.rs  validate.rs
src/dao/: local.rs  mod.rs  mongo.rs
src/service/: limits.rs  mod.rs  state.rs  util.rs
tests/: test_service.rs
