[workspace]
members = [
    "libs/test-util"
]

[package]
name = "portools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
actix-http = "3.3.1"
actix-web = "4"
chrono = { version = "0.4.24", features = ["serde"] }
confy = "0.5.1"
csv = "1.2.1"
futures-util = "0.3.27"
mongodb = "2.4.0"
mongo-util = { path = "libs/mongo-util" }
rust_decimal = { version="1.29.1", features = ["serde-float"] }
rusty-money = { version ="0.4.1", features = ["iso"] }
serde = { version = "1.0.158", features = ["derive"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version ="0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]}

[dev-dependencies]
futures-executor = "0.3.28"
test-util = { path = "libs/test-util" }