

[package]
name = "portools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68", default-features = false }
actix-web = { version = "4.3.1", default-features = false, features = ["macros"] }
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
confy = { version = "0.5.1", default-features = false, features = ["toml_conf"] }
csv = { version = "1.2.1", default-features = false }
mongodb = { version = "2.4.0", default-features = false, features = ["tokio-runtime"] }
mongo-util = { path = "libs/mongo-util" }
rust_decimal = { version="1.29.1", default-features = false, features = ["serde-float"] }
rusty-money = { version ="0.4.1", default-features = false, features = ["iso"] }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
tracing = { version = "0.1.37", default-features = false }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version ="0.3.16", default-features = false, features = ["env-filter"] }
#uuid = { version = "1.3.0", features = [
#    "v4",                # Lets you generate random UUIDs
#    "fast-rng",          # Use a faster (but still sufficiently random) RNG
#    "serde"
#]}

[dev-dependencies]
actix-http = { version="3.3.1", default-features = false }
futures-executor = "0.3.28"
test-util = { path = "libs/test-util" }

[workspace]
members = [
    ".",
    "libs/mongo-util",
    "libs/test-util"
]