[package]
name = "mongo-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { workspace = true }
mongodm = { workspace = true, features = ["tokio-runtime"] }
serde = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
