[package]
name = "portools-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68", default-features = false }
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
mongo-util = { path = "../mongo-util" }
rust_decimal = { version="1.29.1", default-features = false, features = ["serde-float"] }
rusty-money = { version ="0.4.1", default-features = false, features = ["iso"] }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
mongodb = { version = "2.4.0", default-features = false, features = ["tokio-runtime"] }
tracing = { version = "0.1.37", default-features = false }
tracing-bunyan-formatter = "0.3.7"
tracing-log = { version = "0.1.3", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }

[dev-dependencies]
test-util = { path = "../test-util" }