[package]
name = "portools-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
mongo-util = { path = "../mongo-util" }
rust_decimal = { workspace = true }
rusty-money = { workspace = true }
serde = { workspace = true }
mongodb = { workspace = true, features = ["tokio-runtime"] }
mongodm = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.7"
tracing-log = { version = "0.1.3", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }

[dev-dependencies]
test-util = { path = "../test-util" }