[package]
name = "portools-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
confy = { version = "0.5.1", default-features = false, features = ["toml_conf"] }
csv = { version = "1.2.1", default-features = false }
mongodb = { workspace = true, features = ["tokio-runtime"] }
mongo-util = { path = "../mongo-util" }
portools-common = { path = "../portools-common" }
rust_decimal = { workspace = true }
rusty-money = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = "0.7.4"
#uuid = { version = "1.3.0", features = [
#    "v4",                # Lets you generate random UUIDs
#    "fast-rng",          # Use a faster (but still sufficiently random) RNG
#    "serde"
#]}

[dev-dependencies]
actix-http = { version="3.3.1", default-features = false }
futures-executor = "0.3.28"
test-util = { path = "../test-util" }