[package]
name = "portools-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true, features = ["tokio-runtime"] }
mongodm = { workspace = true }
mongo-util = { path = "../mongo-util" }
portools-common = { path = "../portools-common" }
rust_decimal = { workspace = true }
rusty-money = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.28.0", default-features = false }
tracing = { workspace = true }

[dev-dependencies]
